--- a/index.html
+++ b/index.html
@@ -5,65 +5,35 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>World Clock</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-  <link rel="shortcut icon" href="./assets/clock_icon.png" type="image/x-icon">
+  <title>Mini World Clock</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" href="assets/clock_icon.png" />
   <script src="script.js"></script>
 </head>
 
 <body style="width: 300px; height: 400px; color: grey;">
-  <h1 class="text-center my-3">World Clock</h1>
-  <div class="container my-2">
-    <main>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Nigeria <i class="far fa-clock fa"></i></h4>
-            </div>
-            <div class="card-body">
-              <h2 class="card-title pricing-card-title my-3" id="nigeria"></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Chicago <i class="far fa-clock fa"></i></h4>
-            </div>
-            <div class="card-body">
-              <h2 class="card-title pricing-card-title my-3" id="usa"></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal">Austria <i class="far fa-clock fa"></i></h4>
-            </div>
-            <div class="card-body">
-              <h2 class="card-title pricing-card-title my-3" id="austria"></h2>
-            </div>
-          </div>
-        </div>
+  <h1 style="text-align: center;">World Clock</h1>
+  <main>
+    <div class="time-card">
+      <div class="card-header">
+        <h4 style="font-size: medium;">Nigeria</i></h4>
       </div>
-    </main>
-    <main>
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        <!-- ANOTHER 3 ROWS -->
+      <h2 class="card-title" id="nigeria"></h2>
+    </div>
+    <div class="time-card">
+      <div class="card-header">
+        <h4 style="font-size: medium;">Chicago</i></h4>
       </div>
-    </main>
-  </div>
-  <footer>
-    <center class="mb-3 text-light">Codingfizz @ 2023-24</center>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+      <h2 class="card-title" id="usa"></h2>
+    </div>
+    <div class="time-card">
+      <div class="card-header">
+        <h4 style="font-size: medium;">Austria</i></h4>
+      </div>
+      <h2 class="card-title" id="austria"></h2>
+    </div>
+  </main>
 </body>
 
 </html>
