--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <main>
     <div class="time-card">
       <div class="card-header">
-        <h4 style="font-size: medium;">Nigeria</i></h4>
+        <h4 style="font-size: medium;">Nigeria</h4>
       </div>
       <h2 class="card-title" id="nigeria"></h2>
     </div>
     <div class="time-card">
       <div class="card-header">
-        <h4 style="font-size: medium;">Chicago</i></h4>
+        <h4 style="font-size: medium;">Chicago</h4>
       </div>
       <h2 class="card-title" id="usa"></h2>
     </div>
     <div class="time-card">
       <div class="card-header">
-        <h4 style="font-size: medium;">Austria</i></h4>
+        <h4 style="font-size: medium;">Austria</h4>
       </div>
       <h2 class="card-title" id="austria"></h2>
     </div>
