--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,6 +28,57 @@
       <h2 class="card-title" id="usa"></h2>
     </div>
     <div class="time-card">
+      <div class="card-header">
+        <h4 style="font-size: medium;">Austria</h4>
+      </div>
+      <h2 class="card-title" id="austria"></h2>
+    </div>
+  </main>
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mini World Clock</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" href="assets/clock_icon.png" />
+  <script defer src="script.js"></script>
+</head>
+
+<body style="width: 300px; height: 400px; color: grey;">
+  <h1 style="text-align: center;">World Clock <small>{174 countries}</small></h1>
+
+  <div style="text-align: center; margin-bottom: 20px;">
+    <input type="text" id="search-input" placeholder="Search country..." />
+  </div>
+
+  <main>
+    <div class="time-card" id="result-div">
+      <div class="card-header">
+        <h4 id="search-term" style="font-size: medium;">Search Result</h4>
+      </div>
+      <h2 class="card-title" id="search-result"></h2>
+    </div>
+    <div class="time-card" id="def1">
+      <div class="card-header">
+        <h4 style="font-size: medium;">Nigeria</h4>
+      </div>
+      <h2 class="card-title" id="nigeria"></h2>
+    </div>
+    <div class="time-card" id="def2">
+      <div class="card-header">
+        <h4 style="font-size: medium;">USA</h4>
+      </div>
+      <h2 class="card-title" id="usa"></h2>
+    </div>
+    <div class="time-card" id="def3">
       <div class="card-header">
         <h4 style="font-size: medium;">Austria</h4>
       </div>
